[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "host-replace"
version = "0.1.12"
description = "Replace host and domain names in text under various encoding schemes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Adam Reiser", email = "reiser@defensivecomputing.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Typing :: Typed",
]
dependencies = [
    "idna",
    "regex"
]

[project.scripts]
host-replace = "host_replace.cli:main"

[project.urls]
"Homepage" = "https://github.com/adamreiser/host_replace"
"Bug Tracker" = "https://github.com/adamreiser/host_replace/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["host_replace"]
include-package-data = true

[tool.mypy]
files = "src"
strict = true
